RDM-12276 fixed jacocoTestReport