@@ -17,14 +17,6 @@ version = '0.0.1'
 sourceCompatibility = 11
 targetCompatibility = 11
 
-configurations {
-  providedRuntime
-  annotationProcessor
-  aatCompile.extendsFrom(testCompile)
-  aatRuntime.extendsFrom(testRuntime)
-  cucumberRuntime.extendsFrom(functionalRuntime)
-}
-
 
 sourceSets {
   functionalTest {
@@ -83,29 +75,30 @@ test {
 }
 
 task functional(type: Test) {
-  description = 'Executes functional tests against an the HMC HMI Outbound Adapter API instance just deployed'
-  dependsOn functionalTestClasses
-  new File("$buildDir/test-results/test").mkdirs()
-  copy {
-    from "src/aat/resources/DummyTest.xml"
-    into "$buildDir/test-results/test"
-  }
+  description = "Runs functional tests"
+  group = "Verification"
+  testClassesDirs = sourceSets.functionalTest.output.classesDirs
+  classpath = sourceSets.functionalTest.runtimeClasspath
 
-  doFirst {
+  generateCucumberReports.enabled = false
+
+  doLast {
     generateCucumberReports.enabled = true
+
     javaexec {
-      main = "uk.gov.hmcts.hmc.hmi.befta.OutboundAdapterBeftaMain"
-      classpath += configurations.cucumberRuntime + sourceSets.aat.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
+      main = "uk.gov.hmcts.reform.hmc.hmi.befta.OutboundAdapterBeftaMain"
+      classpath += sourceSets.functionalTest.runtimeClasspath + sourceSets.main.output + sourceSets.test.output
       args = [
+        '--strict',
         '--threads', '10',
         '--plugin', "json:${rootDir}/target/cucumber.json",
+        '--plugin', "junit:${buildDir}/test-results/functional/cucumber.xml",
         '--tags', 'not @Ignore',
-        '--glue', 'uk.gov.hmcts.befta.player',
-        '--glue', 'uk.gov.hmcts.hmc.hmi.befta', 'src/aat/resources/features'
+        '--glue', 'uk.gov.hmcts.befta.player', 'src/functionalTest/resources/features'
       ]
+      // '--add-opens=...' added to suppress 'WARNING: An illegal reflective access operation has occurred' in uk.gov.hmcts.befta.util.CucumberStepAnnotationUtils
       jvmArgs = [ '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED' ]
     }
-
   }
 
   finalizedBy {
@@ -135,7 +128,7 @@ task smoke(type: Test) {
 
   new File("$buildDir/test-results/test").mkdirs()
   copy {
-    from "src/aat/resources/DummyTest.xml"
+    from "src/functional/resources/DummyTest.xml"
     into "$buildDir/test-results/test"
   }
 
@@ -143,9 +136,9 @@ task smoke(type: Test) {
     generateCucumberReports.enabled = true
     javaexec {
       main = "uk.gov.hmcts.hmc.hmi.befta.OutboundAdapterBeftaMain"
-      classpath += configurations.cucumberRuntime + sourceSets.aat.runtimeClasspath
+      classpath += configurations.cucumberRuntime + sourceSets.functionalTest.runtimeClasspath
       args = ['--plugin', "json:${rootDir}/target/cucumber.json", '--tags', '@Smoke and not @Ignore', '--glue',
-              'uk.gov.hmcts.befta.player', '--glue', "uk.gov.hmcts.hmc.hmi.befta", 'src/aat/resources/features']
+              'uk.gov.hmcts.befta.player', '--glue', "uk.gov.hmcts.hmc.hmi.befta", 'src/functional/resources/features']
       jvmArgs = [ '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED' ]
     }
   }
